[gd_scene load_steps=15 format=3 uid="uid://dgovlpensv7o3"]

[ext_resource type="Script" path="res://scripts/initial_flow.gd" id="1_cglif"]
[ext_resource type="Texture2D" uid="uid://dqkwqknbmebpn" path="res://assets/images/background/sky_background.png" id="1_fya3r"]
[ext_resource type="Texture2D" uid="uid://livgxe6r2b1n" path="res://assets/images/background/terrain_background_back.png" id="2_3pox8"]
[ext_resource type="Texture2D" uid="uid://kahsgka6qxyr" path="res://assets/images/background/terrain_details.svg" id="3_6sa7d"]
[ext_resource type="Texture2D" uid="uid://c3rhpio2sx4lm" path="res://assets/images/background/grass_terrain.svg" id="4_8cxgj"]
[ext_resource type="PackedScene" uid="uid://cosawlifrhcf3" path="res://scenes/elements/cloud_scene.tscn" id="5_f5j1j"]
[ext_resource type="PackedScene" uid="uid://bwwpepovp64f4" path="res://scenes/ui/ranking_scene.tscn" id="6_wp3u3"]
[ext_resource type="PackedScene" uid="uid://r3wrdg7oci0u" path="res://scenes/ui/start_screen_scene.tscn" id="7_sl5ve"]
[ext_resource type="Shader" path="res://scenes/resources/shaders/wind_shader.gdshader" id="9_v3okh"]

[sub_resource type="Animation" id="Animation_kqk8a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1230, -937)]
}

[sub_resource type="Animation" id="Animation_c4omv"]
resource_name = "moving_clouds"
length = 25.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7.13333, 16.6, 24.9333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1230, -937), Vector2(-104.554, -937), Vector2(657.967, -937), Vector2(3919, -937)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_au5lo"]
_data = {
"RESET": SubResource("Animation_kqk8a"),
"moving_clouds": SubResource("Animation_c4omv")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_83fdc"]
shader = ExtResource("9_v3okh")
shader_parameter/speed = 2.265
shader_parameter/minStrength = 0.075
shader_parameter/maxStrength = 0.362
shader_parameter/strengthScale = 101.74
shader_parameter/interval = 3.15
shader_parameter/detail = 1.0
shader_parameter/distortion = null
shader_parameter/heightOffset = null
shader_parameter/offset = 0.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dkd55"]
load_path = "res://.godot/imported/3-grass.svg-6fe58d678e1f036c8ca035c2c254f459.ctex"

[node name="InitialFlowScene" type="Node2D"]
script = ExtResource("1_cglif")

[node name="TerrainBackground" type="TextureRect" parent="."]
offset_top = 1920.0
offset_right = 2160.0
offset_bottom = 3840.0
texture = ExtResource("2_3pox8")
metadata/_edit_lock_ = true

[node name="SkyBackground" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3852.0
offset_bottom = 1920.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1081, 977)
size_flags_horizontal = 4
texture = ExtResource("1_fya3r")
metadata/_edit_lock_ = true

[node name="TerrainFront" type="TextureRect" parent="."]
offset_left = -250.0
offset_top = 3221.0
offset_right = 1765.0
offset_bottom = 4128.0
texture = ExtResource("3_6sa7d")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="TerrainGrass" type="TextureRect" parent="."]
offset_left = 10.0
offset_top = 3646.0
offset_right = 1007.0
offset_bottom = 3859.0
texture = ExtResource("4_8cxgj")
metadata/_edit_lock_ = true

[node name="CloudScene" parent="." instance=ExtResource("5_f5j1j")]
modulate = Color(1, 1, 1, 0.12549)
position = Vector2(-1230, -937)
scale = Vector2(1.125, 1.125)
skew = 0.174533

[node name="AnimationPlayer" type="AnimationPlayer" parent="CloudScene"]
libraries = {
"": SubResource("AnimationLibrary_au5lo")
}
autoplay = "moving_clouds"

[node name="AddYourNameControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 1923.0
offset_right = 1077.0
offset_bottom = 3843.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_group_ = true

[node name="RankingScene" parent="AddYourNameControl" instance=ExtResource("6_wp3u3")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00462963
anchor_top = 0.108333
anchor_right = 1.00463
anchor_bottom = 1.10833
scale = Vector2(0.873996, 0.873996)

[node name="StartScreenScene" parent="." instance=ExtResource("7_sl5ve")]

[node name="grass3" type="TextureRect" parent="."]
z_index = 16
material = SubResource("ShaderMaterial_83fdc")
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -194.0
offset_top = 3771.0
offset_right = 1522.0
offset_bottom = 4166.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("CompressedTexture2D_dkd55")

[connection signal="close_pressed" from="AddYourNameControl/RankingScene" to="." method="_on_ranking_scene_close_pressed"]
[connection signal="ranking_pressed" from="StartScreenScene" to="." method="_on_start_screen_scene_ranking_pressed"]
